# skyportd

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml  release.yml
config/: default.toml
src/: api.rs  app.rs  config.rs  configuration.rs  logging.rs  main.rs  server_lifecycle.rs  server_registry.rs  service.rs  sftp.rs  shutdown.rs  workflow.rs
src/api/: backups.rs  filesystem.rs  mod.rs  websocket.rs
