[package]
name = "skyportd"
version = "1.0.0-alpha2"
edition = "2024"
rust-version = "1.85"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1"
axum = { version = "0.8.4", features = ["json", "ws"] }
axum-server = { version = "0.7.2", features = ["tls-rustls-no-provider"] }
config = { version = "0.15.22", default-features = false, features = ["toml"] }
hostname = "0.4.1"
http = "1.3.1"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
ring = "0.17.14"
rusqlite = { version = "0.37.0", features = ["bundled"] }
russh = "0.49"
russh-keys = "0.49"
russh-sftp = "2.1"
ssh-key = { version = "0.6", features = ["ed25519"] }
rand = "0.8"
rustls = { version = "0.23.31", features = ["ring"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7.15", features = ["rt"] }
toml = "0.8.23"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json", "time"] }
humantime-serde = "1.1.1"

[dev-dependencies]
tempfile = "3.19.1"
